# api

./: README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  deploy.yml  tests.yml
src/: .database.env  .env  .server.env  Dockerfile  docker-compose.yml  pyproject.toml
src/api/: README.md  gunicorn.conf.py  requirements.txt
src/api/app/: README.md  __init__.py  app.py  config.py
src/api/app/database/: mixins.py
src/api/app/database/crud/: __init__.py  course.py  course_lecture.py  user.py  user_course.py
src/api/app/database/models/: __init__.py  appeal.py  course.py  course_lecture.py  user.py  user_course.py  user_role.py
src/api/app/email/: __init__.py  config.py  messages.py
src/api/app/exception_handlers/: __init__.py  _handlers.py
src/api/app/middlewares/: __init__.py  gatey_middleware.py
src/api/app/routers/: __init__.py  appeals.py  auth.py  course_lectures.py  courses.py  mailing.py  roles.py  users.py  utils.py
src/api/app/serializers/: __init__.py  course.py  course_lecture.py  user.py  user_course.py
src/api/app/services/: __init__.py
src/api/app/services/api/: errors.py  response.py  version.py
src/api/app/services/limiter/: __init__.py
src/api/app/services/request/: __init__.py  auth.py  auth_data.py
src/api/app/tests/: test_routes_courses.py  test_routes_utils.py
src/api/app/tokens/: __init__.py  access_token.py  base_token.py  exceptions.py
