[tool.poetry]
name = "kirillzhosul-web"
version = "0.1.0"
description = "Main website for my personal information."
authors = ["Kirill Zhosul <https://github.com/kirillzhosul>"]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.86.0 "
starlette = "0.20.4"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
sqlalchemy = "2.0.25"
psycopg2-binary = "^2.9.7"
pydantic_settings = "^2.0.3"
starlette-context = "^0.3.6"
aioredis = "2.0.1"
requests = "2.28.1"
gatey-sdk = "0.0.7"
fastapi_mail = "1.2.0"
pyjwt = "2.6.0"
# python-jose = { extras = ["pycryptodome"], version = "^3.3.0" }

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
